--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,6 +22,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Github Emojis</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
